[gd_scene load_steps=3 format=3 uid="uid://cvnqdkln32nc0"]

[ext_resource type="PackedScene" uid="uid://c5a26pnvidg2v" path="res://scenes/player/player.tscn" id="1_hmdmq"]
[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_j6ql0"]

[node name="Level" type="Node2D"]
script = ExtResource("1_j6ql0")

[node name="Background" type="Node2D" parent="."]

[node name="World" type="Node2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)

[node name="Player" parent="." instance=ExtResource("1_hmdmq")]
position = Vector2(90, 611)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(1, -2)
zoom = Vector2(3, 3)
limit_left = -350
limit_bottom = 800
position_smoothing_enabled = true

[node name="Projectiles" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Enterables" type="Node2D" parent="."]

[connection signal="player_fireball" from="Player" to="." method="_on_player_player_fireball"]
[connection signal="player_shot" from="Player" to="." method="_on_player_player_shot"]
[connection signal="player_wants_to_enter" from="Player" to="." method="_on_player_player_wants_to_enter"]
